--- a/GwG_WatchFace/GwG_WatchFace.csproj
+++ b/GwG_WatchFace/GwG_WatchFace.csproj
@@ -84,16 +84,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HandType.cs" />
     <Compile Include="MainActivity.cs" />
-    <Compile Include="StartStopCoords.cs" />
-    <Compile Include="WatchFaceFactory.cs" />
     <Compile Include="MyWatchFaceService.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeZoneReceiver.cs" />
-    <Compile Include="WatchHand.cs" />
-    <Compile Include="WatchTicks.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
@@ -132,6 +127,15 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\bullet_hole.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WatchFaceTools\WatchFaceTools.csproj">
+      <Project>{75931b11-c603-46d7-9239-7b6bedec3247}</Project>
+      <Name>WatchFaceTools</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\gwg_background_AOD.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
