--- a/GwG_WatchFace/Properties/AndroidManifest.xml
+++ b/GwG_WatchFace/Properties/AndroidManifest.xml
@@ -4,7 +4,7 @@
 	<uses-feature android:name="android.hardware.type.watch" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<application android:label="WatchFace" android:theme="@android:style/Theme.DeviceDefault" android:icon="@drawable/Icon">
+	<application android:label="GwGWatchFace" android:theme="@android:style/Theme.DeviceDefault" android:icon="@drawable/Icon">
 		<service android:name="watchface.MyWatchFaceService" android:label="GwG Watchface" android:allowEmbedded="true" android:taskAffinity="" android:permission="android.permission.BIND_WALLPAPER">
 			<meta-data android:name="android.service.wallpaper" android:resource="@xml/watch_face" />
 			<meta-data android:name="com.google.android.wearable.watchface.preview" android:resource="@drawable/gwg_preview" />
