--- a/WatchFace/BSN_WatchFace.csproj
+++ b/WatchFace/BSN_WatchFace.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{EA2F1DB5-B943-47C5-AD6D-9C6F5B6B6705}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>WatchFace</RootNamespace>
-    <AssemblyName>WatchFace</AssemblyName>
+    <AssemblyName>com.bsnsports.watchface</AssemblyName>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <AndroidResgenClass>Resource</AndroidResgenClass>
@@ -35,6 +35,7 @@
     <AotAssemblies>false</AotAssemblies>
     <EnableLLVM>false</EnableLLVM>
     <BundleAssemblies>false</BundleAssemblies>
+    <AndroidSupportedAbis>armeabi;armeabi-v7a;x86</AndroidSupportedAbis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>PdbOnly</DebugType>
@@ -119,25 +120,31 @@
     <AndroidResource Include="Resources\xml\watch_face.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\gwg_background.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\gwg_logo.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\gwg_preview.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\bullet_hole.png" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\WatchFaceTools\WatchFaceTools.csproj">
       <Project>{75931b11-c603-46d7-9239-7b6bedec3247}</Project>
       <Name>WatchFaceTools</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\gwg_aod.png" />
+    <AndroidResource Include="Resources\drawable\mind_the_gap.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Underground.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\BSN_Chevron_Black.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\BSN_Chevron_Red.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\BSN_Inline_Red_White.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\BSNSports_Inline_RedChevron_WhiteText.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\watchface_preview.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
