Revert "made changes for publish on the Google Play"
This reverts commit 3d41a992722ee885ed5a202a49b644e5b4c14120.

--- a/WatchFace/BSN_WatchFace.csproj
+++ b/WatchFace/BSN_WatchFace.csproj
@@ -86,12 +86,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
+    <Compile Include="StartStopCoords.cs" />
+    <Compile Include="WatchFaceFactory.cs" />
     <Compile Include="MyWatchFaceService.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeZoneReceiver.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
     <None Include="GettingStarted.Xamarin" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
