--- a/GwG_WatchFace/Properties/AndroidManifest.xml
+++ b/GwG_WatchFace/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0-alpha" package="com.xamarin.watchface" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.xamarin.watchface" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="25" />
 	<uses-feature android:name="android.hardware.type.watch" />
 	<uses-permission android:name="android.permission.INTERNET" />
