--- a/WatchFaceTools/WatchFaceTools.csproj
+++ b/WatchFaceTools/WatchFaceTools.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Coords.cs" />
+    <Compile Include="DateTimeAdapter.cs" />
     <Compile Include="HandType.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
