--- a/GwG_WatchFace/Properties/AndroidManifest.xml
+++ b/GwG_WatchFace/Properties/AndroidManifest.xml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="5" android:versionName="1.2-alpha" package="com.xamarin.watchface" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="6" android:versionName="1.3-beta" package="com.xamarin.watchface" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="25" />
 	<uses-feature android:name="android.hardware.type.watch" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<application android:label="GeeksWithGuns Watch Face" android:theme="@android:style/Theme.DeviceDefault" android:icon="@drawable/Icon">
-		<service android:name="watchface.AnalogWatchFaceService" android:label="GwG Watchface" android:allowEmbedded="true" android:taskAffinity="" android:permission="android.permission.BIND_WALLPAPER">
+		<service android:name="watchface.AnalogWatchFaceService" android:label="GeeksWithGuns" android:allowEmbedded="true" android:taskAffinity="" android:permission="android.permission.BIND_WALLPAPER">
 			<meta-data android:name="android.service.wallpaper" android:resource="@xml/watch_face" />
 			<meta-data android:name="com.google.android.wearable.watchface.preview" android:resource="@drawable/gwg_preview" />
 			<intent-filter>
